--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-X6YHEMIY.js"><link rel="modulepreload" href="chunk-GIEWYOYH.js"><link rel="modulepreload" href="chunk-RFY625IO.js"><link rel="modulepreload" href="chunk-BHCM4M3W.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-AMCWKCGF.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-X6YHEMIY.js"><link rel="modulepreload" href="chunk-GIEWYOYH.js"><link rel="modulepreload" href="chunk-RFY625IO.js"><link rel="modulepreload" href="chunk-BHCM4M3W.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-S6Z6KNV6.js" type="module"></script></body>
 </html>
