--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Data Governance</title>
-  <base href="/">
-<<<<<<< HEAD
- 
-=======
->>>>>>> 5f40061b76aaefadacf0d6ad77efcf565e5e18f9
+  <base href="/DEF_UI/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
