--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>Data Governancce</title>
+  <title>Data Governance</title>
   <base href="/DEF_UI/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
